--- a/Admin/index.html
+++ b/Admin/index.html
@@ -49,46 +49,22 @@
 
       <!-- Divider -->
       <hr class="sidebar-divider">
-
-      <!-- Heading -->
-      <div class="sidebar-heading">
-        Addons
-      </div>
-
-      <!-- Nav Item - Pages Collapse Menu -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
-          <i class="fas fa-fw fa-folder"></i>
-          <span>Staff</span>
-        </a>
-        <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Staff Details:</h6>
-            <a class="collapse-item" href="../Admin/Staff/Admin.html">Admin Staff</a>
-            <a class="collapse-item" href="../Admin/Staff/Drivers.html">Drivers</a>
-            <a class="collapse-item" href="../Admin/Staff/Factory.html">Factory Workers</a>
-            <a class="collapse-item" href="../Admin/Staff/Sales.html">Sales Staff</a>
-            <a class="collapse-item" href="../Admin/Staff/Security.html">Security</a>
-          </div>
-        </div>
-      </li>
-		  <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages2" aria-expanded="true" aria-controls="collapsePages">
-          <i class="fas fa-fw fa-folder"></i>
-          <span>Vehicles</span>
-        </a>
-        <div id="collapsePages2" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Vehicles Details:</h6>
-			   <a class="collapse-item" href="../Admin/Vehicles/List.html">List</a>
-            <a class="collapse-item" href="login.html">Harmony</a>
-            <a class="collapse-item" href="register.html">Promise</a>
-            <a class="collapse-item" href="forgot-password.html">Harmony</a>
-            <a class="collapse-item" href="forgot-password.html">Promise</a>
-            <a class="collapse-item" href="forgot-password.html">Charity</a>
-          </div>
-        </div>
-      </li>
+		<li class="nav-item">
+			<a class="nav-link" href="Staff/changes.html">
+		 <i class="fas fa-fw fa-folder">
+			 </i><span>Staff</span>
+			</a>
+		
+		</li>
+			
+		<li class="nav-item">
+			<a class="nav-link" href="Vehicles/changes.html">
+		 <i class="fas fa-fw fa-folder">
+			 </i><span>Vehicles</span>
+			</a>
+		
+		</li>  
+		
 		 <li class="nav-item">
         <a class="nav-link" href="tables.html">
           <i class="fas fa-fw fa-user"></i>
