--- a/Admin/Customers/changes.html
+++ b/Admin/Customers/changes.html
@@ -66,25 +66,7 @@
 			</a>
 		
 		</li>
-<!--
-		  <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages2" aria-expanded="true" aria-controls="collapsePages">
-          <i class="fas fa-fw fa-folder"></i>
-          <span>Vehicles</span>
-        </a>
-        <div id="collapsePages2" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Vehicles Details:</h6>
-			   <a class="collapse-item" href="../Admin/Vehicles/List.html">List</a>
-            <a class="collapse-item" href="login.html">Harmony</a>
-            <a class="collapse-item" href="register.html">Promise</a>
-            <a class="collapse-item" href="forgot-password.html">Harmony</a>
-            <a class="collapse-item" href="forgot-password.html">Promise</a>
-            <a class="collapse-item" href="forgot-password.html">Charity</a>
-          </div>
-        </div>
-      </li>
--->
+
 		 <li class="nav-item active">
         <a class="nav-link" href="#">
           <i class="fas fa-fw fa-user"></i>
@@ -244,7 +226,36 @@
 
         <!-- Begin Page Content -->
         <div class="container-fluid">
+<div class="container-fluid">
+  <div class="col-md-2 floatl">
+    <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#addStaff">ADD</button>
+  </div>
+  <!--modal for add-->
+  <div class="modal fade" id="addStaff" tabindex="-1" role="dialog" aria-labelledby="addStaff" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5>Input New Customer Details</h5>
+        </div>
+        <div class="modal-body">
+          <form class="form-control1">
 
+            <input type="text" placeholder="Customer ID" class=" formInput">
+            <input type="text" placeholder="Location" class=" formInput">
+            <button class="but" disabled>Products</button>   
+           <button class="but" disabled>Jug <input type="checkbox"></button>
+           <button class="but" disabled>Sachet<input type="checkbox"></button>
+           <button class="but" disabled> Bottle<input type="checkbox"></button>
+            <input type="text" placeholder="Phone Number" class=" formInput">
+            <input type="text" placeholder="Status" class=" formInput">
+            <input type="text" placeholder="Regular Capacity" class=" formInput">
+            <button class=" btn-success butt ">Submit</button>
+            <button class=" btn-danger butt " data-dismiss="modal">Close</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
             <h1 class="h3 mb-0 text-gray-800">All Customers Details</h1>
