--- a/Admin/Customers/changes.html
+++ b/Admin/Customers/changes.html
@@ -73,7 +73,7 @@
           <span>Customers</span></a>
       </li>
 		 <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link" href="../Sales/changes.html">
           <i class="fas fa-fw fa-book"></i>
           <span>Sales Report</span></a>
       </li>
