--- a/Admin/index.html
+++ b/Admin/index.html
@@ -66,12 +66,12 @@
 		</li>  
 		
 		 <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link" href="../Admin/Customers/changes.html">
           <i class="fas fa-fw fa-user"></i>
           <span>Customers</span></a>
       </li>
 		 <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link" href="../Admin/Sales/changes.html">
           <i class="fas fa-fw fa-book"></i>
           <span>Sales Report</span></a>
       </li>
